# spd-dice

./: README.md  pyproject.toml
spd_dice/: main.py
tests/: test_spd_dice.py
