[tool.poetry]
name = "spd-dice"
version = "0.1.0"
description = ""
authors = ["Sofia <sofia.polin.drob@gmail.com>"]
readme="README.md"

[tool.poetry.scripts]
spd-dice = "spd_dice.main:app"

[tool.poetry.dependencies]
python = "^3.9"
ty = "^0.0.1"
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
